# vector

./: .gitignore  Cargo.toml  LICENSE  Readme.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/common/: Cargo.toml
crates/common/src/: buffer.rs  helpers.rs  lib.rs  scheme.rs  state.rs
crates/common/src/instructions/: advance.rs  close.rs  initialize.rs  mod.rs  passthrough.rs  prepare.rs  withdraw.rs
crates/core/: Cargo.toml
crates/core/src/: digest.rs  instructions.rs  lib.rs  scheme.rs
crates/core/src/schemes/: ed25519.rs  eip191.rs  falcon512.rs  hawk512.rs  mod.rs  secp256k1.rs
fixtures/: rent.json
programs/ed25519/: Cargo.toml
programs/ed25519/src/: lib.rs  scheme.rs
programs/eip191/: Cargo.toml
programs/eip191/src/: lib.rs  scheme.rs
programs/falcon512/: Cargo.toml
programs/falcon512/src/: lib.rs  scheme.rs
programs/hawk512/: Cargo.toml
programs/hawk512/src/: lib.rs  scheme.rs
programs/secp256k1/: Cargo.toml
programs/secp256k1/src/: lib.rs  scheme.rs
programs/vector-program/: Cargo.toml
programs/vector-program/src/: helpers.rs  lib.rs  state.rs
programs/vector-program/src/instructions/: advance.rs  close.rs  initialize.rs  mod.rs
sdk/ts/src/: digest.ts  index.ts  instructions.ts  scheme.ts
sdk/ts/src/schemes/: ed25519.ts  eip191.ts  falcon512.ts  hawk512.ts  secp256k1.ts
sdk/ts/test/: ed25519.test.ts  eip191.test.ts  falcon512.test.ts  hawk512.test.ts  helpers.ts  secp256k1.test.ts  vector.test.ts
tests/: Cargo.toml  common.rs  ed25519.rs  eip191.rs  falcon512.rs  hawk512.rs  lib.rs  secp256k1.rs
