[workspace]
resolver = "2"
members = [
    "programs/vector-program",
    "crates/core",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
pinocchio = "0.11.0"
solana-address = "2.6.0"
solana-define-syscall = "5.0"
solana-instruction = "3.4.0"
solana-pubkey = "4.2.0"
solana-sha256-hasher = "3.1.0"
pinocchio-log = "0.5.1"
pinocchio-system = "0.6.0"
brine-ed25519 = "0.4.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
