[package]
name = "vector-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration tests for vector-program using Mollusk"
publish = false

[lib]
path = "lib.rs"

[dependencies]
vector-core = { path = "../crates/core" }
mollusk-svm = "0.12.0"
mollusk-svm-programs-token = "0.12.0"
solana-account = "3.2.0"
solana-address = { workspace = true, features = ["curve25519"] }
solana-program-option = "3.1"
solana-program-pack = "3.1"
spl-token-interface = "2.0"
