[package]
name = "vector-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mollusk integration tests for the per-scheme Vector programs"
publish = false

[lib]
path = "lib.rs"

[dependencies]
vector-core = { path = "../crates/core" }
mollusk-svm = "0.12.0"
mollusk-svm-programs-token = "0.12.0"
solana-account = "3.2.0"
solana-address = { workspace = true, features = ["curve25519"] }
solana-instruction = { workspace = true }
solana-program-error = "3.0"
solana-program-option = "3.1"
solana-program-pack = "3.1"
spl-token-interface = "2.0"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "=2.1.1"
sha3 = "0.10"
solana-falcon512 = { workspace = true }
pqcrypto-falcon = "0.4"
pqcrypto-traits = "0.3"
solana-hawk512 = { workspace = true }
hawk512 = "0.1.0"
