[package]
name = "vector-ed25519"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vector — Ed25519 signing program"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
vector-common = { path = "../../crates/common" }
pinocchio = { workspace = true }
solana-address = { workspace = true, features = ["curve25519"] }
brine-ed25519 = { workspace = true }
